issue #41 batch demo

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
@@ -1153,11 +1153,12 @@
    "source": [
     "# %%writefile ../training.py\n",
     "from xgboost import XGBClassifier\n",
-    "from sklearn.preprocessing import MinMaxScaler as Scaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "import pickle\n",
     "import pandas as pd\n",
+    "import joblib\n",
     "\n",
     "\n",
     "def train(data_conf, model_conf, **kwargs):\n",
@@ -1173,23 +1174,22 @@
     "    X_train = train[:, 0:8]\n",
     "    y_train = train[:, 8]\n",
     "\n",
-    "    scaler = Scaler()\n",
-    "    scaler.fit(X_train)\n",
-    "    X_train = scaler.transform(X_train)\n",
-    "\n",
     "    print(\"Starting training...\")\n",
     "\n",
     "    # fit model to training data\n",
-    "    model = XGBClassifier(eta=hyperparams[\"eta\"], max_depth=hyperparams[\"max_depth\"])\n",
-    "    model.fit(X_train, y_train)\n",
+    "    clf = Pipeline([('scaler', MinMaxScaler()),\n",
+    "                     ('xgb', XGBClassifier(eta=hyperparams[\"eta\"],\n",
+    "                                           max_depth=hyperparams[\"max_depth\"]))])\n",
+    "\n",
+    "    clf.fit(X_train, y_train)\n",
     "\n",
     "    print(\"Finished training\")\n",
     "\n",
     "    # export model artefacts\n",
-    "    pickle.dump(scaler, open(\"models/scaler.pkl\", \"wb\"))\n",
-    "    pickle.dump(model, open(\"models/model.pkl\", \"wb\"))\n",
+    "    joblib.dump(clf, \"models/model.joblib\")\n",
     "\n",
-    "    print(\"Saved trained model\")\n"
+    "    print(\"Saved trained model\")\n",
+    "\n"
    ]
   },
   {
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1239,16 +1239,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 168\n",
-      "-rw-r--r-- 1 jovyan users 165837 May 13 11:59 model.pkl\n",
-      "-rw-r--r-- 1 jovyan users    853 May 13 11:59 scaler.pkl\n"
+      "total 164\n",
+      "-rw-r--r-- 1 jovyan users 166678 Jul  3 09:49 model.joblib\n"
      ]
     }
    ],
@@ -1264,29 +1263,34 @@
     }
    },
    "source": [
-    "# Create Model Scorer"
+    "# Create Model Scorer\n",
+    "\n",
+    "This model scorer implementation has support for \n",
+    "- Evaluation (def evaluate)\n",
+    "- Batch Scoring (def score)\n",
+    "- RESTful Scoring (ModelScorer.predict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %%writefile ../scoring.py\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "import pickle\n",
+    "import joblib\n",
     "import json\n",
     "import pandas as pd\n",
     "\n",
     "\n",
-    "def evaluate(data_conf, model_conf, **kwargs):\n",
-    "\n",
+    "def score(data_conf, model_conf, **kwargs):\n",
     "    dataset = pd.read_csv(data_conf['url'], header=None)\n",
     "\n",
-    "    # split into test and train\n",
+    "    # in a real world scenario - the scoring will ONLY take a dataset to score and NOT split it like this\n",
+    "    # but for demo model purposes with a simple simple dataset, lets split\n",
     "    _, test = train_test_split(dataset, test_size=data_conf[\"test_split\"], random_state=42)\n",
     "\n",
     "    # split data into X and y\n",
@@ -1294,27 +1298,53 @@
     "    X_test = test[:, 0:8]\n",
     "    y_test = test[:, 8]\n",
     "\n",
-    "    scaler = pickle.load(open(\"models/scaler.pkl\", 'rb'))\n",
-    "    model = pickle.load(open(\"models/model.pkl\", 'rb'))\n",
+    "    clf = joblib.load('models/model.joblib')\n",
     "\n",
-    "    y_pred = model.predict(scaler.transform(X_test))\n",
+    "    y_pred = clf.predict(X_test)\n",
+    "\n",
+    "    return y_pred, y_test\n",
+    "\n",
+    "\n",
+    "def evaluate(data_conf, model_conf, **kwargs):\n",
+    "\n",
+    "    y_pred, y_test = score(data_conf, model_conf, **kwargs)\n",
     "\n",
     "    predictions = [round(value) for value in y_pred]\n",
-    "    accuracy = accuracy_score(y_test, predictions)\n",
+    "\n",
+    "    evaluation = {\n",
+    "        'Accuracy': metrics.accuracy_score(y_test, y_pred),\n",
+    "        'Recall': metrics.recall_score(y_test, y_pred),\n",
+    "        'Precision': metrics.precision_score(y_test, y_pred),\n",
+    "        'f1-score': metrics.f1_score(y_test, y_pred)\n",
+    "    }\n",
+    "\n",
+    "    print(\"model metrics: {}\".format(evaluation))\n",
     "\n",
     "    with open(\"models/evaluation.json\", \"w+\") as f:\n",
-    "        json.dump({'accuracy': (accuracy * 100.0)}, f)\n",
+    "        json.dump(evaluation, f)\n",
     "\n",
     "\n",
     "# Add code required for RESTful API\n",
     "class ModelScorer(object):\n",
-    "    def __init__(self, config=None, base_path=\"models\"):\n",
-    "        self.scaler = pickle.load(open(base_path + \"/scaler.pkl\", 'rb'))\n",
-    "        self.model = pickle.load(open(base_path + \"/model.pkl\", 'rb'))\n",
+    "    def __init__(self, base_path, config=None):\n",
+    "        self.model = joblib.load(base_path + '/model.joblib')\n",
+    "\n",
+    "        from prometheus_client import Counter\n",
+    "        self.pred_class_counter = Counter('model_prediction_classes',\n",
+    "                                          'Model Prediction Classes', ['model', 'version', 'clazz'])\n",
+    "\n",
+    "    def record_prediction_stats(self, pred):\n",
+    "        import os\n",
+    "        self.pred_class_counter.labels(model=os.environ[\"MODEL_NAME\"],\n",
+    "                                       version=os.environ.get(\"MODEL_VERSION\", \"1.0\"),\n",
+    "                                       clazz=str(int(pred))).inc()\n",
     "\n",
     "    def predict(self, data):\n",
-    "        data = self.scaler.transform([data])\n",
-    "        return self.model.predict(data)\n"
+    "        pred = self.model.predict([data])\n",
+    "\n",
+    "        self.record_prediction_stats(pred)\n",
+    "\n",
+    "        return pred\n"
    ]
   },
   {
@@ -1326,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1364,7 @@
      "output_type": "stream",
      "text": [
       "Loading and executing model code\n",
-      "(154, 9)\n",
+      "model metrics: {'Accuracy': 0.7337662337662337, 'Recall': 0.6909090909090909, 'Precision': 0.6129032258064516, 'f1-score': 0.6495726495726496}\n",
       "Artefacts can be found in: .artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6\n",
       "Evaluation metrics can be found in: .artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6/evaluation.json\n"
      ]
@@ -1342,38 +1372,6 @@
    ],
    "source": [
     "!aoa run -id 03c9a01f-bd46-4e7c-9a60-4282039094e6 -m evaluate -ld model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/.cli/datasets/train.json"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Make a Single Prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scorer = ModelScorer(base_path=\".artefacts/03c9a01f-bd46-4e7c-9a60-4282039094e6\")\n",
-    "scorer.predict([6, 168, 72, 35, 0, 43.6, 0.627, 65])[0]"
    ]
   },
   {
@@ -1407,7 +1405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
