issue #26 update readmes and model configs

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
@@ -1112,7 +1112,9 @@
     "numpy==1.16.1\n",
     "pandas==0.24.2\n",
     "xgboost==0.90\n",
-    "scikit-learn==0.22.2\n"
+    "scikit-learn==0.22.2\n",
+    "shap==0.36.0\n",
+    "matplotlib>=2.2.2"
    ]
   },
   {
@@ -1164,7 +1166,8 @@
     "def train(data_conf, model_conf, **kwargs):\n",
     "    hyperparams = model_conf[\"hyperParameters\"]\n",
     "\n",
-    "    dataset = pd.read_csv(data_conf['url'], header=None)\n",
+    "    column_names = [\"NumTimesPrg\", \"PlGlcConc\", \"BloodP\", \"SkinThick\", \"TwoHourSerIns\", \"BMI\", \"DiPedFunc\", \"Age\", \"HasDiabetes\"]\n",
+    "    dataset = pd.read_csv(data_conf['url'], header=None, names=column_names)\n",
     "\n",
     "    # split into test and train\n",
     "    train, _ = train_test_split(dataset, test_size=data_conf[\"test_split\"], random_state=42)\n",
@@ -1177,16 +1180,18 @@
     "    print(\"Starting training...\")\n",
     "\n",
     "    # fit model to training data\n",
-    "    clf = Pipeline([('scaler', MinMaxScaler()),\n",
+    "    model = Pipeline([('scaler', MinMaxScaler()),\n",
     "                     ('xgb', XGBClassifier(eta=hyperparams[\"eta\"],\n",
     "                                           max_depth=hyperparams[\"max_depth\"]))])\n",
+    "    # xgboost saves feature names but lets store on pipeline for easy access\n",
+    "    model.feature_names = column_names[0:8]\n",
     "\n",
-    "    clf.fit(X_train, y_train)\n",
+    "    model.fit(X_train, y_train)\n",
     "\n",
     "    print(\"Finished training\")\n",
     "\n",
     "    # export model artefacts\n",
-    "    joblib.dump(clf, \"models/model.joblib\")\n",
+    "    joblib.dump(model, \"artifacts/output/model.joblib\")\n",
     "\n",
     "    print(\"Saved trained model\")\n",
     "\n"
@@ -1203,17 +1208,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/jovyan/AoaDemoModels\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%cd AoaDemoModels"
+    "import aoa\n",
+    "from aoa import TrainModel, EvaluateModel\n",
+    "from aoa import ModelUtility\n",
+    "\n",
+    "model_util = ModelUtility(base_path=\"./AoaDemoModels\", repo_template_catalog=None)\n",
+    "train = TrainModel(model_util)\n",
+    "evaluate = EvaluateModel(model_util)"
    ]
   },
   {
@@ -1234,7 +1237,9 @@
     }
    ],
    "source": [
-    "!aoa run -id 03c9a01f-bd46-4e7c-9a60-4282039094e6 -m train -ld model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/.cli/datasets/train.json"
+    "train.train_model_local(\n",
+    "    model_id='03c9a01f-bd46-4e7c-9a60-4282039094e6', \n",
+    "    data_conf={'url': 'http://nrvis.com/data/mldata/pima-indians-diabetes.csv', 'test_split': 0.2})"
    ]
   },
   {
@@ -1281,9 +1286,12 @@
     "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "import os\n",
     "import joblib\n",
     "import json\n",
     "import pandas as pd\n",
+    "import shap\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "def score(data_conf, model_conf, **kwargs):\n",
@@ -1298,51 +1306,69 @@
     "    X_test = test[:, 0:8]\n",
     "    y_test = test[:, 8]\n",
     "\n",
-    "    clf = joblib.load('models/model.joblib')\n",
+    "    model = joblib.load('models/model.joblib')\n",
+    "    y_pred = model.predict(X_test)\n",
     "\n",
-    "    y_pred = clf.predict(X_test)\n",
+    "    print(\"Finished Scoring\")\n",
     "\n",
-    "    return y_pred, y_test\n",
+    "    # store predictions somewhere.. As this is demo, we'll just print to stdout.\n",
+    "    print(y_pred)\n",
+    "\n",
+    "    return X_test, y_pred, y_test, model\n",
+    "\n",
+    "\n",
+    "def save_plot(title):\n",
+    "    plt.title(title)\n",
+    "    fig = plt.gcf()\n",
+    "    filename = title.replace(\" \", \"_\").lower()\n",
+    "    fig.savefig('artifacts/output/{}'.format(filename), dpi=500)\n",
     "\n",
     "\n",
     "def evaluate(data_conf, model_conf, **kwargs):\n",
     "\n",
-    "    y_pred, y_test = score(data_conf, model_conf, **kwargs)\n",
-    "\n",
-    "    predictions = [round(value) for value in y_pred]\n",
+    "    X_test, y_pred, y_test, model = score(data_conf, model_conf, **kwargs)\n",
     "\n",
     "    evaluation = {\n",
-    "        'Accuracy': metrics.accuracy_score(y_test, y_pred),\n",
-    "        'Recall': metrics.recall_score(y_test, y_pred),\n",
-    "        'Precision': metrics.precision_score(y_test, y_pred),\n",
-    "        'f1-score': metrics.f1_score(y_test, y_pred)\n",
+    "        'Accuracy': '{:.2f}'.format(metrics.accuracy_score(y_test, y_pred)),\n",
+    "        'Recall': '{:.2f}'.metrics.recall_score(y_test, y_pred),\n",
+    "        'Precision': '{:.2f}'.metrics.precision_score(y_test, y_pred),\n",
+    "        'f1-score': '{:.2f}'.metrics.f1_score(y_test, y_pred)\n",
     "    }\n",
     "\n",
-    "    print(\"model metrics: {}\".format(evaluation))\n",
-    "\n",
-    "    with open(\"models/evaluation.json\", \"w+\") as f:\n",
+    "    with open(\"metrics/metrics.json\", \"w+\") as f:\n",
     "        json.dump(evaluation, f)\n",
+    "\n",
+    "    metrics.plot_confusion_matrix(model, X_test, y_test)\n",
+    "    save_plot('Confusion Matrix')\n",
+    "\n",
+    "    metrics.plot_roc_curve(model, X_test, y_test)\n",
+    "    save_plot('ROC Curve')\n",
+    "\n",
+    "    # xgboost has its own feature importance plot support but lets use shap as explainability example\n",
+    "    shap_explainer = shap.TreeExplainer(model['xgb'])\n",
+    "    shap_values = shap_explainer.shap_values(X_test)\n",
+    "\n",
+    "    shap.summary_plot(shap_values, X_test, feature_names=model.feature_names, show=False)\n",
+    "    save_plot('SHAP Feature Importance')\n",
     "\n",
     "\n",
     "# Add code required for RESTful API\n",
     "class ModelScorer(object):\n",
-    "    def __init__(self, base_path, config=None):\n",
-    "        self.model = joblib.load(base_path + '/model.joblib')\n",
+    "\n",
+    "    def __init__(self, config=None):\n",
+    "        self.model = joblib.load('models/model.joblib')\n",
     "\n",
     "        from prometheus_client import Counter\n",
     "        self.pred_class_counter = Counter('model_prediction_classes',\n",
     "                                          'Model Prediction Classes', ['model', 'version', 'clazz'])\n",
     "\n",
-    "    def record_prediction_stats(self, pred):\n",
-    "        import os\n",
-    "        self.pred_class_counter.labels(model=os.environ[\"MODEL_NAME\"],\n",
-    "                                       version=os.environ.get(\"MODEL_VERSION\", \"1.0\"),\n",
-    "                                       clazz=str(int(pred))).inc()\n",
-    "\n",
     "    def predict(self, data):\n",
     "        pred = self.model.predict([data])\n",
     "\n",
-    "        self.record_prediction_stats(pred)\n",
+    "        # record the predicted class so we can check model drift (via class distributions)\n",
+    "        self.pred_class_counter.labels(model=os.environ[\"MODEL_NAME\"],\n",
+    "                                       version=os.environ.get(\"MODEL_VERSION\", \"1.0\"),\n",
+    "                                       clazz=str(int(pred))).inc()\n",
     "\n",
     "        return pred\n"
    ]
@@ -1371,7 +1397,9 @@
     }
    ],
    "source": [
-    "!aoa run -id 03c9a01f-bd46-4e7c-9a60-4282039094e6 -m evaluate -ld model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/.cli/datasets/train.json"
+    "evaluate.evaluate_model_local(\n",
+    "    model_id='03c9a01f-bd46-4e7c-9a60-4282039094e6', \n",
+    "    data_conf={'url': 'http://nrvis.com/data/mldata/pima-indians-diabetes.csv', 'test_split': 0.2})"
    ]
   },
   {
