issue #62 revert R changes

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
@@ -1114,7 +1114,9 @@
     "xgboost==0.90\n",
     "scikit-learn==0.22.2\n",
     "shap==0.36.0\n",
-    "matplotlib>=2.2.2"
+    "matplotlib>=2.2.2\n",
+    "sklearn2pmml>=0.63.1\n",
+    "teradataml>=16.20.0.5"
    ]
   },
   {
@@ -1156,24 +1158,27 @@
     "# %%writefile ../training.py\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn2pmml import make_pmml_pipeline, sklearn2pmml\n",
+    "from teradataml import create_context\n",
+    "from teradataml.dataframe.dataframe import DataFrame\n",
     "\n",
-    "import pandas as pd\n",
     "import joblib\n",
+    "import os\n",
     "\n",
     "\n",
     "def train(data_conf, model_conf, **kwargs):\n",
     "    hyperparams = model_conf[\"hyperParameters\"]\n",
     "\n",
-    "    column_names = [\"NumTimesPrg\", \"PlGlcConc\", \"BloodP\", \"SkinThick\", \"TwoHourSerIns\", \"BMI\", \"DiPedFunc\", \"Age\", \"HasDiabetes\"]\n",
-    "    dataset = pd.read_csv(data_conf['url'], header=None, names=column_names)\n",
+    "    create_context(host=data_conf[\"host\"], username=os.environ['TD_USERNAME'], password=os.environ['TD_PASSWORD'])\n",
     "\n",
-    "    # split into test and train\n",
-    "    train, _ = train_test_split(dataset, test_size=data_conf[\"test_split\"], random_state=42)\n",
+    "    # read training dataset from Teradata and convert to pandas\n",
+    "    train_df = DataFrame(data_conf[\"table\"])\n",
+    "    train_df = train_df.select([[\"NumTimesPrg\", \"PlGlcConc\", \"BloodP\", \"SkinThick\", \"TwoHourSerIns\", \"BMI\", \"DiPedFunc\", \"Age\", \"HasDiabetes\"]])\n",
+    "    train_df = train_df.to_pandas()\n",
     "\n",
     "    # split data into X and y\n",
-    "    train = train.values\n",
+    "    train = train_df.values\n",
     "    X_train = train[:, 0:8]\n",
     "    y_train = train[:, 8]\n",
     "\n",
@@ -1183,8 +1188,8 @@
     "    model = Pipeline([('scaler', MinMaxScaler()),\n",
     "                     ('xgb', XGBClassifier(eta=hyperparams[\"eta\"],\n",
     "                                           max_depth=hyperparams[\"max_depth\"]))])\n",
-    "    # xgboost saves feature names but lets store on pipeline for easy access\n",
-    "    model.feature_names = column_names[0:8]\n",
+    "    # xgboost saves feature names but lets store on pipeline for easy access later\n",
+    "    model.feature_names = train_df.columns.tolist()\n",
     "\n",
     "    model.fit(X_train, y_train)\n",
     "\n",
@@ -1192,6 +1197,7 @@
     "\n",
     "    # export model artefacts\n",
     "    joblib.dump(model, \"artifacts/output/model.joblib\")\n",
+    "    sklearn2pmml(make_pmml_pipeline(model), \"artifacts/output/model.pmml\")\n",
     "\n",
     "    print(\"Saved trained model\")\n",
     "\n"
@@ -1239,7 +1245,7 @@
    "source": [
     "train.train_model_local(\n",
     "    model_id='03c9a01f-bd46-4e7c-9a60-4282039094e6', \n",
-    "    data_conf={'url': 'http://nrvis.com/data/mldata/pima-indians-diabetes.csv', 'test_split': 0.2})"
+    "    data_conf={'host': '3.238.151.85', 'table': 'PIMA_TRAIN'})"
    ]
   },
   {
@@ -1284,40 +1290,51 @@
    "source": [
     "# %%writefile ../scoring.py\n",
     "from sklearn import metrics\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from teradataml import create_context\n",
+    "from teradataml.dataframe.dataframe import DataFrame\n",
+    "from teradataml.dataframe.copy_to import copy_to_sql\n",
     "\n",
     "import os\n",
     "import joblib\n",
     "import json\n",
     "import pandas as pd\n",
-    "import shap\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "def score(data_conf, model_conf, **kwargs):\n",
-    "    dataset = pd.read_csv(data_conf['url'], header=None)\n",
     "\n",
-    "    # in a real world scenario - the scoring will ONLY take a dataset to score and NOT split it like this\n",
-    "    # but for demo model purposes with a simple simple dataset, lets split\n",
-    "    _, test = train_test_split(dataset, test_size=data_conf[\"test_split\"], random_state=42)\n",
+    "    # load the model\n",
+    "    model = joblib.load('artifacts/input/model.joblib')\n",
+    "\n",
+    "    create_context(host=data_conf[\"host\"], username=os.environ['TD_USERNAME'], password=os.environ['TD_PASSWORD'])\n",
+    "\n",
+    "    # Read test dataset from Teradata and convert to pandas.\n",
+    "    # As this is for demo purposes, we simulate the test dataset changing between executions\n",
+    "    # by introducing a random sample which can be changed in the dataset definition in the AOA\n",
+    "    # Note that the sampling is performed in Teradata!\n",
+    "    test_df = DataFrame(data_conf[\"table\"])\n",
+    "    test_df = test_df.select([model.feature_names])\n",
+    "    test_df = test_df.sample(frac=float(data_conf[\"demo_sample\"])).to_pandas()\n",
     "\n",
     "    # split data into X and y\n",
-    "    test = test.values\n",
+    "    test = test_df.values\n",
     "    X_test = test[:, 0:8]\n",
     "    y_test = test[:, 8]\n",
     "\n",
-    "    model = joblib.load('models/model.joblib')\n",
+    "    print(\"Scoring\")\n",
     "    y_pred = model.predict(X_test)\n",
     "\n",
     "    print(\"Finished Scoring\")\n",
     "\n",
-    "    # store predictions somewhere.. As this is demo, we'll just print to stdout.\n",
-    "    print(y_pred)\n",
+    "    # store predictions in Teradata\n",
+    "    y_pred = pd.DataFrame(y_pred, columns=[\"pred\"])\n",
+    "    copy_to_sql(df=y_pred, table_name=data_conf[\"predictions\"], index=True, if_exists=\"replace\")\n",
     "\n",
     "    return X_test, y_pred, y_test, model\n",
     "\n",
     "\n",
     "def save_plot(title):\n",
+    "    import matplotlib.pyplot as plt\n",
+    "\n",
     "    plt.title(title)\n",
     "    fig = plt.gcf()\n",
     "    filename = title.replace(\" \", \"_\").lower()\n",
@@ -1330,12 +1347,12 @@
     "\n",
     "    evaluation = {\n",
     "        'Accuracy': '{:.2f}'.format(metrics.accuracy_score(y_test, y_pred)),\n",
-    "        'Recall': '{:.2f}'.metrics.recall_score(y_test, y_pred),\n",
-    "        'Precision': '{:.2f}'.metrics.precision_score(y_test, y_pred),\n",
-    "        'f1-score': '{:.2f}'.metrics.f1_score(y_test, y_pred)\n",
+    "        'Recall': '{:.2f}'.format(metrics.recall_score(y_test, y_pred)),\n",
+    "        'Precision': '{:.2f}'.format(metrics.precision_score(y_test, y_pred)),\n",
+    "        'f1-score': '{:.2f}'.format(metrics.f1_score(y_test, y_pred))\n",
     "    }\n",
     "\n",
-    "    with open(\"metrics/metrics.json\", \"w+\") as f:\n",
+    "    with open(\"artifacts/output/metrics.json\", \"w+\") as f:\n",
     "        json.dump(evaluation, f)\n",
     "\n",
     "    metrics.plot_confusion_matrix(model, X_test, y_test)\n",
@@ -1345,10 +1362,13 @@
     "    save_plot('ROC Curve')\n",
     "\n",
     "    # xgboost has its own feature importance plot support but lets use shap as explainability example\n",
+    "    import shap\n",
+    "\n",
     "    shap_explainer = shap.TreeExplainer(model['xgb'])\n",
     "    shap_values = shap_explainer.shap_values(X_test)\n",
     "\n",
-    "    shap.summary_plot(shap_values, X_test, feature_names=model.feature_names, show=False)\n",
+    "    shap.summary_plot(shap_values, X_test, feature_names=model.feature_names,\n",
+    "                      show=False, plot_size=(12,8), plot_type='bar')\n",
     "    save_plot('SHAP Feature Importance')\n",
     "\n",
     "\n",
@@ -1356,7 +1376,7 @@
     "class ModelScorer(object):\n",
     "\n",
     "    def __init__(self, config=None):\n",
-    "        self.model = joblib.load('models/model.joblib')\n",
+    "        self.model = joblib.load('artifacts/input/model.joblib')\n",
     "\n",
     "        from prometheus_client import Counter\n",
     "        self.pred_class_counter = Counter('model_prediction_classes',\n",
@@ -1399,7 +1419,7 @@
    "source": [
     "evaluate.evaluate_model_local(\n",
     "    model_id='03c9a01f-bd46-4e7c-9a60-4282039094e6', \n",
-    "    data_conf={'url': 'http://nrvis.com/data/mldata/pima-indians-diabetes.csv', 'test_split': 0.2})"
+    "    data_conf={'host': '3.238.151.85', 'table': 'PIMA_TEST', 'demo_sample': 0.9})"
    ]
   },
   {
@@ -1433,7 +1453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
