issue #62 fix template

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
@@ -1313,7 +1313,7 @@
     "    # Note that the sampling is performed in Teradata!\n",
     "    test_df = DataFrame(data_conf[\"table\"])\n",
     "    test_df = test_df.select([model.feature_names])\n",
-    "    test_df = test_df.sample(frac=float(data_conf[\"demo_sample\"])).to_pandas()\n",
+    "    test_df = test_df.sample(frac=float(data_conf[\"sample\"])).to_pandas()\n",
     "\n",
     "    # split data into X and y\n",
     "    test = test_df.values\n",
@@ -1419,7 +1419,7 @@
    "source": [
     "evaluate.evaluate_model_local(\n",
     "    model_id='03c9a01f-bd46-4e7c-9a60-4282039094e6', \n",
-    "    data_conf={'host': '3.238.151.85', 'table': 'PIMA_TEST', 'demo_sample': 0.9})"
+    "    data_conf={'host': '3.238.151.85', 'table': 'PIMA_TEST', 'sample': 0.9})"
    ]
   },
   {
