issue #69 standardized metric normalization and moving sto util to aoa cli. Added MicroModelling Notebook

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/Explore Diabetes.ipynb
@@ -111,8 +111,9 @@
    "source": [
     "from teradataml.dataframe.dataframe import DataFrame\n",
     "from teradataml import create_context\n",
+    "import getpass\n",
     "\n",
-    "engine = create_context(host=\"3.238.151.85\", username=os.environ[\"TD_USERNAME\"], password=os.environ[\"TD_PASSWORD\"])"
+    "engine = create_context(host=\"3.238.151.85\", username=\"AOA_DEMO\", password=getpass.getpass(\"password\"))"
    ]
   },
   {
@@ -1197,11 +1198,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %%writefile ../training.py\n",
+    "\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -1248,7 +1250,7 @@
     "    joblib.dump(model, \"artifacts/output/model.joblib\")\n",
     "    xgboost_to_pmml(pipeline=model, col_names=feature_names, target_name=target_name, pmml_f_name=\"artifacts/output/model.pmml\")\n",
     "\n",
-    "    print(\"Saved trained model\")\n"
+    "    print(\"Saved trained model\")"
    ]
   },
   {
@@ -1337,36 +1339,26 @@
     "\n",
     "\n",
     "def score(data_conf, model_conf, **kwargs):\n",
+    "    model = joblib.load(\"artifacts/input/model.joblib\")\n",
     "\n",
-    "    # load the model\n",
-    "    model = joblib.load('artifacts/input/model.joblib')\n",
+    "    create_context(host=os.environ[\"AOA_CONN_HOST\"],\n",
+    "                   username=os.environ[\"AOA_CONN_USERNAME\"],\n",
+    "                   password=os.environ[\"AOA_CONN_PASSWORD\"])\n",
     "\n",
-    "    create_context(host=data_conf[\"host\"], username=os.environ['TD_USERNAME'], password=os.environ['TD_PASSWORD'])\n",
-    "\n",
-    "    # Read test dataset from Teradata\n",
-    "    test_df = DataFrame(data_conf[\"table\"])\n",
-    "\n",
-    "    # As this is for demo purposes, we simulate the test dataset changing between executions\n",
-    "    # by introducing a random sample. Note that the sampling is performed in Teradata!\n",
-    "    if \"is_evaluation\" in kwargs:\n",
-    "        test_df = test_df.sample(frac=0.8)\n",
+    "    predict_df = DataFrame(data_conf[\"table\"])\n",
     "\n",
     "    # convert to pandas to use locally\n",
-    "    test_df = test_df.to_pandas()\n",
-    "\n",
-    "    X_test = test_df[model.feature_names]\n",
+    "    predict_df = predict_df.to_pandas()\n",
     "\n",
     "    print(\"Scoring\")\n",
-    "    y_pred = model.predict(X_test)\n",
+    "    y_pred = model.predict(predict_df[model.feature_names])\n",
     "\n",
     "    print(\"Finished Scoring\")\n",
     "\n",
     "    # create result dataframe and store in Teradata\n",
     "    y_pred = pd.DataFrame(y_pred, columns=[\"pred\"])\n",
-    "    y_pred[\"PatientId\"] = test_df[\"PatientId\"].values\n",
+    "    y_pred[\"PatientId\"] = predict_df[\"PatientId\"].values\n",
     "    copy_to_sql(df=y_pred, table_name=data_conf[\"predictions\"], index=False, if_exists=\"replace\")\n",
-    "\n",
-    "    return X_test, y_pred[\"pred\"], test_df[model.target_name], model\n",
     "\n",
     "\n",
     "def save_plot(title):\n",
@@ -1380,10 +1372,23 @@
     "\n",
     "\n",
     "def evaluate(data_conf, model_conf, **kwargs):\n",
-    "    # tell scoring that its being called from evaluate function as opposed to batch scoring\n",
-    "    kwargs[\"is_evaluation\"] = True\n",
+    "    model = joblib.load('artifacts/input/model.joblib')\n",
     "\n",
-    "    X_test, y_pred, y_test, model = score(data_conf, model_conf, **kwargs)\n",
+    "    create_context(host=os.environ[\"AOA_CONN_HOST\"],\n",
+    "                   username=os.environ[\"AOA_CONN_USERNAME\"],\n",
+    "                   password=os.environ[\"AOA_CONN_PASSWORD\"])\n",
+    "\n",
+    "    # Read test dataset from Teradata\n",
+    "    # As this is for demo purposes, we simulate the test dataset changing between executions\n",
+    "    # by introducing a random sample. Note that the sampling is performed in Teradata!\n",
+    "    test_df = DataFrame(data_conf[\"table\"]).sample(frac=0.8)\n",
+    "    test_df = test_df.to_pandas()\n",
+    "\n",
+    "    X_test = test_df[model.feature_names]\n",
+    "    y_test = test_df[model.target_name]\n",
+    "\n",
+    "    print(\"Scoring\")\n",
+    "    y_pred = model.predict(test_df[model.feature_names])\n",
     "\n",
     "    evaluation = {\n",
     "        'Accuracy': '{:.2f}'.format(metrics.accuracy_score(y_test, y_pred)),\n",
@@ -1430,7 +1435,8 @@
     "                                       version=os.environ.get(\"MODEL_VERSION\", \"1.0\"),\n",
     "                                       clazz=str(int(pred))).inc()\n",
     "\n",
-    "        return pred\n"
+    "        return pred\n",
+    "\n"
    ]
   },
   {
