Updates for new monitoring #91

--- a/model_definitions/b1e18b12-5ccd-4c94-b96b-c2cebf230150/notebooks/demand_forecasting.ipynb
+++ b/model_definitions/b1e18b12-5ccd-4c94-b96b-c2cebf230150/notebooks/demand_forecasting.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"forecasting.jpg\" alt=\"forecasting\" width=\"800\"/>\n",
+    "<img src=\"https://v5c5v6u7.stackpathcdn.com/wp-content/uploads/blog/demand-forecasting.jpg\" alt=\"forecasting\" width=\"800\"/>\n",
     "\n",
     "## Context\n",
     "The problem is borrowed from Kaggle competitions \"https://www.kaggle.com/kannanaikkal/food-demand-forecasting\". \n",
