--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/In Vantage Scoring.ipynb
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/notebooks/In Vantage Scoring.ipynb
@@ -33,21 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "AOA_DEMO Password ··········\n"
+      "Password ···········\n"
      ]
     }
    ],
    "source": [
     "password = getpass.getpass(\"Password\")\n",
     "\n",
-    "engine = create_context(host=\"3.238.151.85\", username=\"AOA_DEMO\", password=password)\n",
+    "engine = create_context(host=\"40.117.178.55\", username=\"aoa_service\", password=password, database=\"aoa_data\")\n",
     "conn = get_connection()\n",
     "cursor = engine.raw_connection().cursor()"
    ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +89,7 @@
        "      <th></th>\n",
        "      <th>model_version</th>\n",
        "      <th>model_id</th>\n",
+       "      <th>model_type</th>\n",
        "      <th>project_id</th>\n",
        "      <th>deployed_at</th>\n",
        "      <th>model</th>\n",
@@ -97,51 +98,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>f7741c1f-ca5e-4c16-a1fb-1bd4ea7e3df4</td>\n",
-       "      <td>07701a36-8ea1-4156-94be-20836f38d0a7</td>\n",
+       "      <td>dbc5f29e-ac76-441e-8025-9344307f635f</td>\n",
+       "      <td>f937b5d8-02c6-5150-80c7-1e4ff07fea31</td>\n",
+       "      <td>PMML</td>\n",
        "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2020-11-23 21:08:42.460</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" xmlns:data=\"http://jpmml.org/jpmml-model/InlineTable\" version=\"4.3\"&gt;\\n\\t&lt;Header&gt;\\n\\t\\t&lt;Application name=\"JPMML-SkLearn\" version=\"1.6.3\"/&gt;\\n\\t\\t&lt;T...</td>\n",
+       "      <td>2022-01-10 19:08:24.130</td>\n",
+       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>84cd9235-2cce-47f5-9c3d-3751d89b4520</td>\n",
-       "      <td>03c9a01f-bd46-4e7c-9a60-4282039094e6</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2020-11-26 11:32:49.530</td>\n",
+       "      <td>df300e1a-781b-4b3e-9b8e-f32ef54c7a89</td>\n",
+       "      <td>73d3f5a1-a5a9-55fd-9fe8-298a8aa7929d</td>\n",
+       "      <td>PMML</td>\n",
+       "      <td>a85ede91-9b28-4a7d-bb32-eee2aaffa82f</td>\n",
+       "      <td>2022-01-10 19:09:58.490</td>\n",
        "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>38e4693b-141b-4230-892c-a9affbf69671</td>\n",
-       "      <td>03c9a01f-bd46-4e7c-9a60-4282039094e6</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2020-11-26 12:52:09.040</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>80b3502f-a171-4c33-a524-92e43fd59545</td>\n",
-       "      <td>03c9a01f-bd46-4e7c-9a60-4282039094e6</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2020-11-24 12:21:22.520</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\"&gt;\\n    &lt;Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\"&gt;\\n        &lt;Application name=\"Nyoka\" version=\"4.3.0\"/&gt;\\n  ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5ef8f6cc-b934-46f1-81e5-b629e52241a3</td>\n",
-       "      <td>03c9a01f-bd46-4e7c-9a60-4282039094e6</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2020-11-24 11:20:52.200</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" xmlns:data=\"http://jpmml.org/jpmml-model/InlineTable\" version=\"4.4\"&gt;\\n\\t&lt;Header&gt;\\n\\t\\t&lt;Application name=\"JPMML-SkLearn\" version=\"1.6.7\"/&gt;\\n\\t\\t&lt;T...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>7d4bf85a-b58e-4e5d-a9e3-0b73c777ce31</td>\n",
-       "      <td>03c9a01f-bd46-4e7c-9a60-4282039094e6</td>\n",
-       "      <td>23e1df4b-b630-47a1-ab80-7ad5385fcd8d</td>\n",
-       "      <td>2020-11-23 13:00:21.920</td>\n",
-       "      <td>b'&lt;?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?&gt;\\n&lt;PMML xmlns=\"http://www.dmg.org/PMML-4_4\" xmlns:data=\"http://jpmml.org/jpmml-model/InlineTable\" version=\"4.4\"&gt;\\n\\t&lt;Header&gt;\\n\\t\\t&lt;Application name=\"JPMML-SkLearn\" version=\"1.6.7\"/&gt;\\n\\t\\t&lt;T...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -149,31 +120,19 @@
       ],
       "text/plain": [
        "                          model_version                              model_id  \\\n",
-       "0  f7741c1f-ca5e-4c16-a1fb-1bd4ea7e3df4  07701a36-8ea1-4156-94be-20836f38d0a7   \n",
-       "1  84cd9235-2cce-47f5-9c3d-3751d89b4520  03c9a01f-bd46-4e7c-9a60-4282039094e6   \n",
-       "2  38e4693b-141b-4230-892c-a9affbf69671  03c9a01f-bd46-4e7c-9a60-4282039094e6   \n",
-       "3  80b3502f-a171-4c33-a524-92e43fd59545  03c9a01f-bd46-4e7c-9a60-4282039094e6   \n",
-       "4  5ef8f6cc-b934-46f1-81e5-b629e52241a3  03c9a01f-bd46-4e7c-9a60-4282039094e6   \n",
-       "5  7d4bf85a-b58e-4e5d-a9e3-0b73c777ce31  03c9a01f-bd46-4e7c-9a60-4282039094e6   \n",
+       "0  dbc5f29e-ac76-441e-8025-9344307f635f  f937b5d8-02c6-5150-80c7-1e4ff07fea31   \n",
+       "1  df300e1a-781b-4b3e-9b8e-f32ef54c7a89  73d3f5a1-a5a9-55fd-9fe8-298a8aa7929d   \n",
        "\n",
-       "                             project_id             deployed_at  \\\n",
-       "0  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2020-11-23 21:08:42.460   \n",
-       "1  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2020-11-26 11:32:49.530   \n",
-       "2  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2020-11-26 12:52:09.040   \n",
-       "3  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2020-11-24 12:21:22.520   \n",
-       "4  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2020-11-24 11:20:52.200   \n",
-       "5  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2020-11-23 13:00:21.920   \n",
+       "  model_type                            project_id             deployed_at  \\\n",
+       "0       PMML  23e1df4b-b630-47a1-ab80-7ad5385fcd8d 2022-01-10 19:08:24.130   \n",
+       "1       PMML  a85ede91-9b28-4a7d-bb32-eee2aaffa82f 2022-01-10 19:09:58.490   \n",
        "\n",
        "                                                                                                                                                                                                                                                       model  \n",
-       "0  b'<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" xmlns:data=\"http://jpmml.org/jpmml-model/InlineTable\" version=\"4.3\">\\n\\t<Header>\\n\\t\\t<Application name=\"JPMML-SkLearn\" version=\"1.6.3\"/>\\n\\t\\t<T...  \n",
-       "1  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  \n",
-       "2  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  \n",
-       "3  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  \n",
-       "4  b'<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" xmlns:data=\"http://jpmml.org/jpmml-model/InlineTable\" version=\"4.4\">\\n\\t<Header>\\n\\t\\t<Application name=\"JPMML-SkLearn\" version=\"1.6.7\"/>\\n\\t\\t<T...  \n",
-       "5  b'<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" xmlns:data=\"http://jpmml.org/jpmml-model/InlineTable\" version=\"4.4\">\\n\\t<Header>\\n\\t\\t<Application name=\"JPMML-SkLearn\" version=\"1.6.7\"/>\\n\\t\\t<T...  "
+       "0  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  \n",
+       "1  b'<?xml version=\"1.0\" encoding=\"UTF-8\"?>\\n<PMML xmlns=\"http://www.dmg.org/PMML-4_4\" version=\"4.4\">\\n    <Header copyright=\"Copyright (c) 2018 Software AG\" description=\"Default Description\">\\n        <Application name=\"Nyoka\" version=\"4.3.0\"/>\\n  ...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,28 +182,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>{\"probability_0\":0.9886043799233987,\"probability_1\":0.011395620076601292,\"predicted_HasDiabetes\":0}</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"probability_0\":0.9985361840112014,\"probability_1\":0.0014638159887985821,\"predicted_HasDiabetes\":0,\"probability\":0.9985361840112014}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>{\"probability_0\":0.9980198370119622,\"probability_1\":0.0019801629880378813,\"predicted_HasDiabetes\":0}</td>\n",
+       "      <td>4</td>\n",
+       "      <td>{\"probability_0\":0.31451604819478785,\"probability_1\":0.6854839518052122,\"predicted_HasDiabetes\":1,\"probability\":0.6854839518052122}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>8</td>\n",
-       "      <td>{\"probability_0\":0.05094995570429306,\"probability_1\":0.9490500442957069,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>5</td>\n",
+       "      <td>{\"probability_0\":0.9527500266004268,\"probability_1\":0.04724997339957319,\"predicted_HasDiabetes\":0,\"probability\":0.9527500266004268}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9</td>\n",
-       "      <td>{\"probability_0\":0.13574050732643506,\"probability_1\":0.8642594926735649,\"predicted_HasDiabetes\":1}</td>\n",
+       "      <td>21</td>\n",
+       "      <td>{\"probability_0\":0.8676194791001057,\"probability_1\":0.13238052089989427,\"predicted_HasDiabetes\":0,\"probability\":0.8676194791001057}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>13</td>\n",
-       "      <td>{\"probability_0\":0.5286287238760723,\"probability_1\":0.4713712761239277,\"predicted_HasDiabetes\":0}</td>\n",
+       "      <td>23</td>\n",
+       "      <td>{\"probability_0\":0.13552471706313474,\"probability_1\":0.8644752829368653,\"predicted_HasDiabetes\":1,\"probability\":0.8644752829368653}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -252,32 +211,32 @@
       ],
       "text/plain": [
        "   PatientId  \\\n",
-       "0          1   \n",
-       "1          3   \n",
-       "2          8   \n",
-       "3          9   \n",
-       "4         13   \n",
+       "0          3   \n",
+       "1          4   \n",
+       "2          5   \n",
+       "3         21   \n",
+       "4         23   \n",
        "\n",
-       "                                                                                           score_result  \n",
-       "0   {\"probability_0\":0.9886043799233987,\"probability_1\":0.011395620076601292,\"predicted_HasDiabetes\":0}  \n",
-       "1  {\"probability_0\":0.9980198370119622,\"probability_1\":0.0019801629880378813,\"predicted_HasDiabetes\":0}  \n",
-       "2    {\"probability_0\":0.05094995570429306,\"probability_1\":0.9490500442957069,\"predicted_HasDiabetes\":1}  \n",
-       "3    {\"probability_0\":0.13574050732643506,\"probability_1\":0.8642594926735649,\"predicted_HasDiabetes\":1}  \n",
-       "4     {\"probability_0\":0.5286287238760723,\"probability_1\":0.4713712761239277,\"predicted_HasDiabetes\":0}  "
+       "                                                                                                                            score_result  \n",
+       "0  {\"probability_0\":0.9985361840112014,\"probability_1\":0.0014638159887985821,\"predicted_HasDiabetes\":0,\"probability\":0.9985361840112014}  \n",
+       "1    {\"probability_0\":0.31451604819478785,\"probability_1\":0.6854839518052122,\"predicted_HasDiabetes\":1,\"probability\":0.6854839518052122}  \n",
+       "2    {\"probability_0\":0.9527500266004268,\"probability_1\":0.04724997339957319,\"predicted_HasDiabetes\":0,\"probability\":0.9527500266004268}  \n",
+       "3    {\"probability_0\":0.8676194791001057,\"probability_1\":0.13238052089989427,\"predicted_HasDiabetes\":0,\"probability\":0.8676194791001057}  \n",
+       "4    {\"probability_0\":0.13552471706313474,\"probability_1\":0.8644752829368653,\"predicted_HasDiabetes\":1,\"probability\":0.8644752829368653}  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query=\"\"\"\n",
-    "SELECT * FROM IVSM_SCORE(\n",
+    "SELECT * FROM IVSM.IVSM_SCORE(\n",
     "    on PIMA_TEST\n",
-    "    on (SELECT model_id, model FROM aoa_ivsm_models WHERE model_version = '84cd9235-2cce-47f5-9c3d-3751d89b4520') AS ModelTable DIMENSION\n",
+    "    on (SELECT model_id, model FROM aoa_ivsm_models WHERE model_version = 'dbc5f29e-ac76-441e-8025-9344307f635f') AS ModelTable DIMENSION\n",
     "    using\n",
-    "        ModelID('03c9a01f-bd46-4e7c-9a60-4282039094e6')\n",
+    "        ModelID('f937b5d8-02c6-5150-80c7-1e4ff07fea31')\n",
     "        ColumnsToPreserve('PatientId')\n",
     "        ModelType('PMML')\n",
     ") sc;\n",
@@ -286,16 +245,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Copyright 2021 Teradata. All rights reserved."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
