--- a/model_definitions/python-diabetes/notebooks/Explore Diabetes.ipynb
+++ b/model_definitions/python-diabetes/notebooks/Explore Diabetes.ipynb
@@ -1225,11 +1225,11 @@
     "    print(\"Finished training\")\n",
     "\n",
     "    # export model artefacts\n",
-    "    joblib.dump(model, f\"{context.artefact_output_path}/model.joblib\")\n",
+    "    joblib.dump(model, f\"{context.artifact_output_path}/model.joblib\")\n",
     "\n",
     "    # we can also save as pmml so it can be used for In-Vantage scoring etc.\n",
     "    xgboost_to_pmml(pipeline=model, col_names=feature_names, target_name=target_name,\n",
-    "                    pmml_f_name=f\"{context.artefact_output_path}/model.pmml\")\n",
+    "                    pmml_f_name=f\"{context.artifact_output_path}/model.pmml\")\n",
     "\n",
     "    print(\"Saved trained model\")\n",
     "\n",
@@ -1277,7 +1277,7 @@
     "\n",
     "ctx = ModelContext(dataset_info=dataset_info,\n",
     "                   hyperparams={\"max_depth\": 5},\n",
-    "                   artefact_output_path=\"./\")\n",
+    "                   artifact_output_path=\"./\")\n",
     "\n",
     "train(context=ctx)"
    ]
@@ -1339,7 +1339,7 @@
     "\n",
     "    aoa_create_context()\n",
     "\n",
-    "    model = joblib.load(f\"{context.artefact_input_path}/model.joblib\")\n",
+    "    model = joblib.load(f\"{context.artifact_input_path}/model.joblib\")\n",
     "\n",
     "    feature_names = context.dataset_info.feature_names\n",
     "    target_name = context.dataset_info.target_names[0]\n",
@@ -1363,7 +1363,7 @@
     "        'f1-score': '{:.2f}'.format(metrics.f1_score(y_test, y_pred))\n",
     "    }\n",
     "\n",
-    "    with open(f\"{context.artefact_output_path}/metrics.json\", \"w+\") as f:\n",
+    "    with open(f\"{context.artifact_output_path}/metrics.json\", \"w+\") as f:\n",
     "        json.dump(evaluation, f)\n",
     "\n",
     "    metrics.plot_confusion_matrix(model, X_test, y_test)\n",
@@ -1430,7 +1430,7 @@
     "\n",
     "ctx = ModelContext(dataset_info=dataset_info,\n",
     "                   hyperparams={\"max_depth\": 5},\n",
-    "                   artefact_output_path=\"./\")\n",
+    "                   artifact_output_path=\"./\")\n",
     "\n",
     "evaluate(context=ctx)"
    ]
@@ -1469,7 +1469,7 @@
     "\n",
     "    aoa_create_context()\n",
     "\n",
-    "    model = joblib.load(f\"{context.artefact_input_path}/model.joblib\")\n",
+    "    model = joblib.load(f\"{context.artifact_input_path}/model.joblib\")\n",
     "\n",
     "    target_name = context.dataset_info.target_names[0]\n",
     "\n",
@@ -1531,7 +1531,7 @@
     "\n",
     "ctx = ModelContext(dataset_info=dataset_info,\n",
     "                   hyperparams={\"max_depth\": 5},\n",
-    "                   artefact_output_path=\"./\")\n",
+    "                   artifact_output_path=\"./\")\n",
     "\n",
     "score(context=ctx)"
    ]
